# Test_Internet_Store

./: README.md  pyproject.toml
config/: settings.py  urls.py
first_task/: first_task.py
store/: admin.py  models.py  paginators.py  serializers.py  urls.py
store/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_image_alter_product_image_large_and_more.py
store/views/: cart_item_views.py  cart_views.py  category_views.py  product_views.py  subcategory_views.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
